--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,6 +1,14 @@
 ja:
   date:
+    formats:
+      default: "%Y年%m月%d日(%a)"
+    
+    abbr_day_names: [日, 月, 火, 水, 木, 金, 土]
+    
     order:
       - :year
       - :month
       - :day
+  time:
+    formats:
+      default: "%H時%M分"  
