--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,7 +4,7 @@ ja:
       default: "%Y年%m月%d日(%a)"
     
     abbr_day_names: [日, 月, 火, 水, 木, 金, 土]
-    
+
     order:
       - :year
       - :month
@@ -12,3 +12,6 @@ ja:
   time:
     formats:
       default: "%H時%M分"  
+      long: "%Y年%m月%d日(%a) %H時%M分"
+    
+    abbr_day_names: [日, 月, 火, 水, 木, 金, 土]
